--- a/src/ETS2INTERNAL.vcxproj.filters
+++ b/src/ETS2INTERNAL.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Features.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ETS2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
