--- a/src/ETS2INTERNAL.vcxproj
+++ b/src/ETS2INTERNAL.vcxproj
@@ -104,12 +104,12 @@
     <ClInclude Include="ETS2.h" />
     <ClInclude Include="Features.h" />
     <ClInclude Include="GUI\GUI.h" />
-    <ClInclude Include="Hooking.h" />
-    <ClInclude Include="Memory.h" />
+    <ClInclude Include="Hooking\Hooking.h" />
+    <ClInclude Include="Memory\Memory.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="Render\Render.h" />
+    <ClInclude Include="GUI\Render.h" />
     <ClInclude Include="Utils.h" />
-    <ClInclude Include="Detour.h" />
+    <ClInclude Include="Hooking\Detour.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\deps\IMGUI\imgui.cpp">
@@ -142,18 +142,27 @@
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">../pch.h</PrecompiledHeaderFile>
     </ClCompile>
-    <ClCompile Include="Hooking.cpp" />
-    <ClCompile Include="Memory.cpp" />
+    <ClCompile Include="Hooking\Hooking.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Memory\Memory.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Render\Render.cpp">
+    <ClCompile Include="GUI\Render.cpp">
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">../pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="Utils.cpp" />
-    <ClCompile Include="Detour.cpp" />
+    <ClCompile Include="Hooking\Detour.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
